--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
-    "country": "co.in",
-    "page_resolution": 500,
+    "country": "com",
+    "page_resolution": 1500,
     "tesseract_path": "/usr/bin/tesseract",
-    "proxy_links": 1,
-    "proxy_images": 1,
+    "proxy_links": 0,
+    "proxy_images": 0,
     "max_retry_links": 5,
     "max_retry_images": 5,
     "global_retry_time": 30
